@@ -2,6 +2,8 @@ Revision history for perl distribution Convos
 
 0.99_27 Not Released
  - Fix going to connection dialog after connection save
+ - Fix hitting enter/return inside the "Dialog name" field on "Join dialog"
+ - Fix joining channel which you are already part of
  - Will detect if Javascript is disabled and notify user
  - Add support for notifications on keywords #142
 
